--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -165,7 +165,7 @@ a {
 }
 
 .content p {
-    width: 77%;
+    width: 100%;
     font-size: 20px;
 }
 
